# ChangeLog for rox-base/rox
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/rox/ChangeLog,v 1.21 2006/10/05 17:24:22 lack Exp $

  05 Oct 2006; Jim Ramsay <lack@gentoo.org> metadata.xml, -rox-2.1.3.ebuild,
  -rox-2.1.4.ebuild, -rox-2.1.5.ebuild:
  Cleaned up some older versions, and accepting maintainer role

*rox-2.5 (15 Aug 2006)

  17 Aug 2006; Stephanie Lockwood-Childs <wormo@gentoo.org> +rox-2.5.ebuild:
  version bump, thanks to Joachim Fasting (Bug #142931)

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove lanius from metadata.xml as he's retired.

*rox-2.4.1-r1 (11 Jun 2006)

  11 Jun 2006; Daniel Black <dragonheart@gentoo.org> +rox-2.4.1-r1.ebuild:
  permission fix as per bug #130353 thanks to Peter Hyman

  27 Apr 2006; Jason Wever <weeve@gentoo.org> rox-2.4.1.ebuild:
  Re-added ~sparc keyword as it mysteriously went missing.

*rox-2.4.1 (16 Apr 2006)

  16 Apr 2006; Sergey Kuleshov <svyatogor@gentoo.org> +rox-2.4.1.ebuild:
  New version of Rox. All credits go to Peter Hyman. Bug #115616

  17 Feb 2006; Simon Stelling <blubb@gentoo.org>
  -files/2.1.2-crash-save-display-settings.patch.bz2:
  remove unneeded file

*rox-2.3 (25 Sep 2005)

  25 Sep 2005; Sergey Kuleshov <svyatogor@gentoo.org> +rox-2.3.ebuild:
  New version of ROX-Filer added with patch from CVS tree to go cut down on
  shared-mime dependencies. Thanks to Peter Hayman for this ebuild and the patch
  (Bug #102228).

  10 Jul 2005; Heinrich Wendel <lanius@gentoo.org>
  +files/rox-2.2.0-gcc4.patch, rox-2.2.0.ebuild:
  gcc4 fix

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> rox-2.2.0.ebuild:
  stable on amd64

  20 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> rox-2.2.0.ebuild:
  Stable on alpha.

  17 Mar 2005; Joseph Jezak <josejx@gentoo.org> rox-2.2.0.ebuild:
  Marked ppc stable for bug #85617.
