@@ -3,41 +3,41 @@ MD5 6582a6fac3d7f42181413ef84b8ef834 files/rox-2.2.0-gcc4.patch 746
 RMD160 454cea01e0afaab42ce40d13e1778cda90a31238 files/rox-2.2.0-gcc4.patch 746
 SHA256 97dfd3b338f7da7462b06d586ba9933c819d3f2fbed64e18d809d08ef2ced813 files/rox-2.2.0-gcc4.patch 746
 DIST 01_all_rox-cvs-fix.patch.bz2 52369 RMD160 e3a18045f6aac0862b5dd13c152fe150093d62ce SHA256 0f20cf0e1f976cd270756f8f0a068e82ebd0e923016401d2cadc8ddd0a8bc8b2
-DIST rox-2.2.0.tgz 2033724
+DIST rox-2.2.0.tgz 2033724 RMD160 6fe46202ddd3f04c07a0eaaabde88eb776c535dd SHA1 1653a11058eed9858bfd828392e9329c0ac39104 SHA256 31bdaa795c4b166a665460289db8adaea2708bc67c1fe8b3d34a569a784d3d2a
 DIST rox-2.3.tgz 2246715 RMD160 073227bf60046e325e6b414c19db62fa1be3d43d SHA256 268704b4dd5910a8713afc36a8e53f728516b766a635a4a361fb034a47689ba0
 DIST rox-2.4.1.tgz 2366048 RMD160 083facc66d10bce157eb1964c6387aac89b01013 SHA1 9e2fea71d1eb347200c23b28117651be7fccbcdc SHA256 627922e99beb224eb0b5e5a70b28a2d2b9d7d65562c2564d8c28f9a2f136919c
 DIST rox-filer-2.5.tar.bz2 1785317 RMD160 a0d2f9fcc3eca8063b77d93460a19ab38600e815 SHA1 062e54d98169413eccd41b23e2b4766718004e7e SHA256 d91120d78e770c9c09822560dacb42fca641d092cbe52064ca7232f089062921
-EBUILD rox-2.2.0.ebuild 1740 RMD160 e84a61166d17ccac29bb75fce6d4d93d63fa6779 SHA1 396b9ed5380f9d9f5ffb92feca38ac8bceb4e661 SHA256 9534c5e6b273107f8b493c8579ce4499d9625edd24210475fa68784efc0ae57d
-MD5 4bd987ad82955ea187c4999fa53da2a4 rox-2.2.0.ebuild 1740
-RMD160 e84a61166d17ccac29bb75fce6d4d93d63fa6779 rox-2.2.0.ebuild 1740
-SHA256 9534c5e6b273107f8b493c8579ce4499d9625edd24210475fa68784efc0ae57d rox-2.2.0.ebuild 1740
-EBUILD rox-2.3.ebuild 1931 RMD160 bbddbc13f7c7a1f33d9df834c1e0eb383ad695a4 SHA1 1d1c3c35999a2f31697c8781de0c20a5d2007b01 SHA256 1b2d0c86334e937006ac751f0be2b3a76be14bc0fa5f2c4bb0585b4dbe4183ae
-MD5 2bf5e73080ce1ba23ac33d3cd6a7b4d5 rox-2.3.ebuild 1931
-RMD160 bbddbc13f7c7a1f33d9df834c1e0eb383ad695a4 rox-2.3.ebuild 1931
-SHA256 1b2d0c86334e937006ac751f0be2b3a76be14bc0fa5f2c4bb0585b4dbe4183ae rox-2.3.ebuild 1931
-EBUILD rox-2.4.1-r1.ebuild 1705 RMD160 ce7ed6926ba38f4f86bc731c2d0d1eeeff9587a1 SHA1 749c4c4e1996fdb6a4d8850382eb92453b4da5d5 SHA256 bd6ba16075e89788d4c224c1e5edca008889062bf5a6fb7a9f234fea45efcf58
-MD5 a5ea75e869dac82d03be2f7106d8e0ad rox-2.4.1-r1.ebuild 1705
-RMD160 ce7ed6926ba38f4f86bc731c2d0d1eeeff9587a1 rox-2.4.1-r1.ebuild 1705
-SHA256 bd6ba16075e89788d4c224c1e5edca008889062bf5a6fb7a9f234fea45efcf58 rox-2.4.1-r1.ebuild 1705
-EBUILD rox-2.4.1.ebuild 1757 RMD160 f935bca44570cf59176605f7963d1f27148d11eb SHA1 93e13d0556800cb372e79065b10b248c3d617906 SHA256 e252a5de7b7f606d458a4303df26df003b645dcecfa84de6e7b5922db06843ca
-MD5 545e8951efc7fd82217cb9fc3a97523d rox-2.4.1.ebuild 1757
-RMD160 f935bca44570cf59176605f7963d1f27148d11eb rox-2.4.1.ebuild 1757
-SHA256 e252a5de7b7f606d458a4303df26df003b645dcecfa84de6e7b5922db06843ca rox-2.4.1.ebuild 1757
-EBUILD rox-2.5.ebuild 1748 RMD160 24760f3515104bb0a7d3604b5de34b1c25710cc0 SHA1 0f5027cfaf3c7b04e47259b5e38b09e7a33fbea6 SHA256 8acb9b3548887956df7500b5ca22283fa53aa6bd79d4dc9cf0c7f1793b00d8ab
-MD5 e7b9cb8034ef1f5d29fe3b437cc9bc68 rox-2.5.ebuild 1748
-RMD160 24760f3515104bb0a7d3604b5de34b1c25710cc0 rox-2.5.ebuild 1748
-SHA256 8acb9b3548887956df7500b5ca22283fa53aa6bd79d4dc9cf0c7f1793b00d8ab rox-2.5.ebuild 1748
-MISC ChangeLog 7947 RMD160 e7afb14945fc216acdeb299bf02aa51116aee566 SHA1 b095432f31c9c4d5453724d12533cd3beb0019d2 SHA256 487a25fe170f3c7f7c146c48e2a1155b978a3d15dc83e8f3dab484e427507309
-MD5 9035566f706ac1d86e77e39500737c50 ChangeLog 7947
-RMD160 e7afb14945fc216acdeb299bf02aa51116aee566 ChangeLog 7947
-SHA256 487a25fe170f3c7f7c146c48e2a1155b978a3d15dc83e8f3dab484e427507309 ChangeLog 7947
+EBUILD rox-2.2.0.ebuild 2138 RMD160 f218f8a51d32d8053ba27790900a49c8c3613ef4 SHA1 e10f4562de3d916dc8fcae8eeacf7c20581e8294 SHA256 e578cba907f660f8b1c2f31c0cb64dc547e5a8942645706550b3b6115c74f0e5
+MD5 e767b5614f27978a74be7d76acf1f646 rox-2.2.0.ebuild 2138
+RMD160 f218f8a51d32d8053ba27790900a49c8c3613ef4 rox-2.2.0.ebuild 2138
+SHA256 e578cba907f660f8b1c2f31c0cb64dc547e5a8942645706550b3b6115c74f0e5 rox-2.2.0.ebuild 2138
+EBUILD rox-2.3.ebuild 2313 RMD160 69ba6f1cdeefef4106165b3c437a81c6fb8def2c SHA1 ac50407ce94380cf91708866ed3bd543ed003a8d SHA256 e085a9d604293cae34cfef080cbfd3a75d04ac3b8523885d8961bd2e8db1b0da
+MD5 6e7f423c7917b80342c978dc01a71435 rox-2.3.ebuild 2313
+RMD160 69ba6f1cdeefef4106165b3c437a81c6fb8def2c rox-2.3.ebuild 2313
+SHA256 e085a9d604293cae34cfef080cbfd3a75d04ac3b8523885d8961bd2e8db1b0da rox-2.3.ebuild 2313
+EBUILD rox-2.4.1-r1.ebuild 2102 RMD160 480f2c4acffb2a7809c239887817749848b45406 SHA1 9a4ff020cebbcebffca0fae97e396eb05f310ca7 SHA256 5a9d62dffaa8f170735049025f9c4986bf028c1194c27ecce6120ac1ebea353e
+MD5 b538c67d61c5de78f20c5270a69b0aa8 rox-2.4.1-r1.ebuild 2102
+RMD160 480f2c4acffb2a7809c239887817749848b45406 rox-2.4.1-r1.ebuild 2102
+SHA256 5a9d62dffaa8f170735049025f9c4986bf028c1194c27ecce6120ac1ebea353e rox-2.4.1-r1.ebuild 2102
+EBUILD rox-2.4.1.ebuild 2160 RMD160 5b6802d3a453c7d7f6642db938c87e579b74c1a3 SHA1 56358058c4bdb5a5f26fee92348d2a18d60f83cb SHA256 0acab63e5b5cb0691b983254ce59b6d2f3298ec74f16b90e3a4b7e07af47e54b
+MD5 d5cae12863add1501a2021e0a10aa112 rox-2.4.1.ebuild 2160
+RMD160 5b6802d3a453c7d7f6642db938c87e579b74c1a3 rox-2.4.1.ebuild 2160
+SHA256 0acab63e5b5cb0691b983254ce59b6d2f3298ec74f16b90e3a4b7e07af47e54b rox-2.4.1.ebuild 2160
+EBUILD rox-2.5.ebuild 2151 RMD160 d40ffb7cc73de403f1da6617dff31623982d7f3c SHA1 b2b11671a366fe508a8d5d06579028f3f48c0419 SHA256 9c099af6bc4a872beaf6f9a96e370296293f23eead3b33bf93ae97d5f6a1b75c
+MD5 98823998c7432250f87c69dff62f3aae rox-2.5.ebuild 2151
+RMD160 d40ffb7cc73de403f1da6617dff31623982d7f3c rox-2.5.ebuild 2151
+SHA256 9c099af6bc4a872beaf6f9a96e370296293f23eead3b33bf93ae97d5f6a1b75c rox-2.5.ebuild 2151
+MISC ChangeLog 8235 RMD160 56119ae1366f37877e4ee48079db8ad9834317df SHA1 daaf380e00bf395e5d7289ace96dea3e2247c28f SHA256 49576bf70fddcc748ac2053c223bab6faac65f94ad82d11e25e3510a141029ac
+MD5 375f11dba1d06d1e336bd17c9bf546cd ChangeLog 8235
+RMD160 56119ae1366f37877e4ee48079db8ad9834317df ChangeLog 8235
+SHA256 49576bf70fddcc748ac2053c223bab6faac65f94ad82d11e25e3510a141029ac ChangeLog 8235
 MISC metadata.xml 249 RMD160 e2c6dd05c9bf06ba99d0236eb34f4c7cf87b72eb SHA1 abf2616bc3f2b616c282ca9388fa8a65c513c64e SHA256 b1a6408e0e6a8defd1faf2265bd303646d0f0acda955cadd0c1bd795e98feabf
 MD5 afe0e5c29d53da08182cfcb52338da43 metadata.xml 249
 RMD160 e2c6dd05c9bf06ba99d0236eb34f4c7cf87b72eb metadata.xml 249
 SHA256 b1a6408e0e6a8defd1faf2265bd303646d0f0acda955cadd0c1bd795e98feabf metadata.xml 249
-MD5 93f2d819182714fd4bd786848bb6e9a6 files/digest-rox-2.2.0 59
-RMD160 a40acebec35fb6aac6b04abf33ab8b273e8f8a23 files/digest-rox-2.2.0 59
-SHA256 1a9de905cc1a0e330fe904d123c97d88452d447797e91ec746578d74b1c0dc57 files/digest-rox-2.2.0 59
+MD5 b838ab97e612c6bde38ede4062bc507a files/digest-rox-2.2.0 223
+RMD160 6c84279a5c87615251d1cfdc3eeb8845fe1caeef files/digest-rox-2.2.0 223
+SHA256 309f910e06913c81a659ace021ba34298f7f27db7d0e095b26fa6581c1418ec0 files/digest-rox-2.2.0 223
 MD5 fdc508867abcc1e40db2429c8256b810 files/digest-rox-2.3 479
 RMD160 333ce53562622f3d770cdd6a7c4c0452e42fbbc3 files/digest-rox-2.3 479
 SHA256 d5a2e198159ddcd9d6980085bf7579be44e25a32b47b2730752a81682b55267e files/digest-rox-2.3 479
