@@ -1,1 +1,3 @@
 MD5 0deefd9e7edd4e79cd0f18f423264ebb rox-2.2.0.tgz 2033724
+RMD160 6fe46202ddd3f04c07a0eaaabde88eb776c535dd rox-2.2.0.tgz 2033724
+SHA256 31bdaa795c4b166a665460289db8adaea2708bc67c1fe8b3d34a569a784d3d2a rox-2.2.0.tgz 2033724
