@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/rox/Attic/rox-2.3.ebuild,v 1.2 2006/08/15 23:14:16 wormo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/rox/Attic/rox-2.3.ebuild,v 1.3 2006/10/23 14:27:45 lack Exp $
 
 inherit eutils
 
@@ -16,6 +16,12 @@ SLOT="0"
 KEYWORDS="~x86 ~ppc ~alpha ~sparc ~amd64"
 
 DEPEND=">=x11-libs/gtk+-2.4
+	>=dev-libs/libxml2-2.4.23
+	>=x11-misc/shared-mime-info-0.14
+	>=dev-util/pkgconfig-0.20
+	svg? ( gnome-base/librsvg )"
+
+RDEPEND=">=x11-libs/gtk+-2.4
 	>=dev-libs/libxml2-2.4.23
 	>=x11-misc/shared-mime-info-0.14
 	svg? ( gnome-base/librsvg )"
@@ -43,8 +49,17 @@ src_compile() {
 	use sparc && unset PLATFORM
 
 	cd ${WORKDIR}/${P}/ROX-Filer
+
+	# Most rox self-compiles have a 'read' call to wait for the user to
+	# press return if the compile fails.
+	# Find and remove this:
+	sed -i.bak -e 's/\<read WAIT\>/#read/' AppRun
+
 	./AppRun --compile || die "make failed"
 	(cd src; make clean) > /dev/null
+
+	# Restore the original AppRun
+	mv AppRun.bak AppRun
 }
 
 src_install() {
