@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/rox/Attic/rox-2.4.1.ebuild,v 1.3 2006/04/27 04:31:48 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/rox/Attic/rox-2.4.1.ebuild,v 1.4 2006/10/23 14:27:45 lack Exp $
 
 inherit eutils
 
@@ -14,6 +14,13 @@ SLOT="0"
 KEYWORDS="~amd64 ~ppc ~sparc ~x86"
 
 DEPEND=">=x11-libs/gtk+-2.4
+	>=dev-libs/glib-2.2
+	>=dev-libs/libxml2-2.4.23
+	>=x11-misc/shared-mime-info-0.14
+	>=dev-util/pkgconfig-0.20
+	svg? ( gnome-base/librsvg )"
+
+RDEPEND=">=x11-libs/gtk+-2.4
 	>=dev-libs/glib-2.2
 	>=dev-libs/libxml2-2.4.23
 	>=x11-misc/shared-mime-info-0.14
@@ -31,10 +38,19 @@ src_compile() {
 	# use sparc && unset PLATFORM
 
 	cd ROX-Filer
+
+	# Most rox self-compiles have a 'read' call to wait for the user to
+	# press return if the compile fails.
+	# Find and remove this:
+	sed -i.bak -e 's/\<read WAIT\>/#read/' AppRun
+
 	./AppRun --compile || die "make failed"
 	(cd src; make clean) > /dev/null
 	# don't need this directory anymore
 	rm -fr build
+
+	# Restore the original AppRun
+	mv AppRun.bak AppRun
 }
 
 # new streamlined install
