@@ -1,6 +1,11 @@
 # ChangeLog for rox-base/rox
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/rox/ChangeLog,v 1.21 2006/10/05 17:24:22 lack Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/rox/ChangeLog,v 1.22 2006/10/23 14:27:45 lack Exp $
+
+  23 Oct 2006; Jim Ramsay <lack@gentoo.org> rox-2.2.0.ebuild,
+  rox-2.3.ebuild, rox-2.4.1.ebuild, rox-2.4.1-r1.ebuild, rox-2.5.ebuild:
+  Bug 152419, Added dev-util/pkgconfig to DEPEND and remove the 'read' call
+  temporarily to prevent the ebuild going interactive if the compile fails.
 
   05 Oct 2006; Jim Ramsay <lack@gentoo.org> metadata.xml, -rox-2.1.3.ebuild,
   -rox-2.1.4.ebuild, -rox-2.1.5.ebuild:
